00-cooking/deploy-minio-rootcert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - --certs-dir=/certs
        - /data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio-data
          mountPath: /data
        - name: minio-certs
          mountPath: /certs
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-data
      - name: minio-certs
        secret:
          secretName: minio-certs
