00-cooking/ingress-minio-certmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: minio.cloudteam.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9090
    - host: minios3.cloudteam.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
      - minio.cloudteam.work
      secretName: echo-minio-tls
    - hosts:
      - minios3.cloudteam.work
      secretName: echo-minio-tls
